<resources>
    <string name="app_name">Gastos2149</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="cad_grupo">Cadastrar Grupo</string>
    <string name="slideshow">Slideshow</string>
    <string name="tools">Tools</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="orcamento">Orçamento</string>
    <string name="total_gasto">Total Gasto</string>
    <string name="descricao">Descrição</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="nome">Nome</string>
    <string name="obrigatorio">Campo obrigatório</string>
    <string name="grupo_done">Grupo cadastrado com sucesso</string>
    <string name="valor">Valor</string>
    <string name="listar_alterar_grupo">Listar/Alterar Grupo</string>
    <string name="grupos">Grupos</string>
    <string name="saldo">Saldo</string>
</resources>
