<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/view_index"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/home" />
        <item
            android:id="@+id/view_orcamento"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/orcamento" />
    </group>

    <item android:title="@string/grupos">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/view_cad_grupo"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/cad_grupo" />
                <item
                    android:id="@+id/nav_send"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/listar_alterar_grupo" />
            </group>
        </menu>
    </item>

</menu>
